kubernetes/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hostelhub-backend-svc
  namespace: default
spec:
  type: ClusterIP
  selector:
    app: hostelhub-backend
  ports:
  - port: 3001
    targetPort: 3001
    protocol: TCP
